--- a/web-layui/admin/index.html
+++ b/web-layui/admin/index.html
@@ -29,14 +29,14 @@
                         <input type="password" name="password" placeholder="请输入密码" class="layui-input">
                     </div>
                 </div>
-<!--                <div class="layui-form-item">-->
-<!--                    <label class="layui-form-label layui-icon layui-icon-vercode">验证码</label>-->
-<!--                    <div class="layui-input-block">-->
-<!--                        <input type="text" name="key" id="key" hidden>-->
-<!--                        <input type="text" name="code" placeholder="请输入验证码" class="layui-input">-->
-<!--                        <img id="captcha">-->
-<!--                    </div>-->
-<!--                </div>-->
+                <div class="layui-form-item">
+                    <label class="layui-form-label layui-icon layui-icon-vercode">验证码</label>
+                    <div class="layui-input-block">
+                        <input type="text" name="key" id="key" hidden>
+                        <input type="text" name="code" placeholder="请输入验证码" class="layui-input">
+                        <img id="captcha">
+                    </div>
+                </div>
                 <div class="layui-form-item">
                     <div class="layui-input-block">
                         <button class="layui-btn" lay-submit lay-filter="login">登录</button>
@@ -51,17 +51,17 @@
     layui.use(['jquery', 'element', 'form'], function () {
         var $ = layui.jquery, form = layui.form;
 
-        // $.get('captcha', function (res) {
-        //     $('#key').val(res.data.key);
-        //     $('#captcha').attr('src', res.data.image);
-        // });
-        //
-        // $('#captcha').click(function () {
-        //     $.get('captcha', function (res) {
-        //         $('#key').val(res.data.key);
-        //         $('#captcha').attr('src', res.data.image);
-        //     });
-        // });
+        $.get('captcha', function (res) {
+            $('#key').val(res.data.key);
+            $('#captcha').attr('src', res.data.image);
+        });
+
+        $('#captcha').click(function () {
+            $.get('captcha', function (res) {
+                $('#key').val(res.data.key);
+                $('#captcha').attr('src', res.data.image);
+            });
+        });
 
         form.on('submit(login)', function (data) {
             $.post('login', data.field, function (res) {
